--- a/hoa7mlishe/hoa7mlishe.API.csproj
+++ b/hoa7mlishe/hoa7mlishe.API.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="system.drawing.common" Version="7.0.0" />
   </ItemGroup>
@@ -35,5 +36,7 @@
 <PropertyGroup>
   <GenerateDocumentationFile>true</GenerateDocumentationFile>
   <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+  <UserSecretsId>96c2155b-c1e3-492b-bc17-afe41d3c5abe</UserSecretsId>
+  <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
 </PropertyGroup>
 </Project>
