--- a/hoa7mlishe/hoa7mlishe.API.csproj
+++ b/hoa7mlishe/hoa7mlishe.API.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0-windows10.0.22621.0</TargetFramework>
+    <TargetFramework>net8.0-windows10.0.22621.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -11,6 +11,7 @@
     <PackageReference Include="Blurhash.Core" Version="2.0.0" />
     <PackageReference Include="EntityFrameworkCore.SqlServer.HierarchyId" Version="4.0.0" />
     <PackageReference Include="Magick.NET.Core" Version="13.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.1" />
     <PackageReference Include="microsoft.aspnetcore.httpoverrides" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
     <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="7.0.5" />
@@ -38,5 +39,6 @@
   <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   <UserSecretsId>96c2155b-c1e3-492b-bc17-afe41d3c5abe</UserSecretsId>
   <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+  <OutputType>Exe</OutputType>
 </PropertyGroup>
 </Project>
